management-api/overlays/moc-prod/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: management-api-route53
spec:
    host: management.moc.thoth-station.ninja
    to:
        kind: Service
        name: management-api
    tls:
        caCertificate: ENC[AES256_GCM,data:lE6vPe0s1PnxI0qBwVsTStoTbt+tXkmbOoj6HgLDRl33I3PItfqxjthATKo3/Bh03rl/7ky6yW2FvAS+I2RtCh8PHxd5zQ2USVn8XFdEiG6iwibWrtX2yfnRYp+VL3qUHPuf3QW6Rl8YhXgC962vHYlNH7DaFrO3vqucZkMwZlJdREUTr33+ARBfZIj+KxhZ0gJfCLjMm6Yy/1GGQYY0fVENZUHvZPkgrz1nM0iNoNuM9K0cM8jP/1YjZsFL1cTUOe63rDdL95bLG6JAj4DYL5Ffay+bYKUcZC1boFPf5hqMDzrLHNXntUX5q+HyOekSUKQgFYAV3RD/m72f8I/kABt7837muFs1PR8veddqqRSDyde8A5y7GHRhG5yksY16WjNSolotIfM7Hzs1Cxq0NsBSWztTXN0z8h8RaiH7Cq9+/5Aae8hyphFl61+35xjmJfj4+pv7b [...]
        certificate: ENC[AES256_GCM,data:uwebOvXaoS0oyeZGeL6jwM3dKb7sZK2+tbQRCvEPzVP9mQ3mrObtpkI3kvDt4fxBPJTtwgK9GKrP8UJfOsq0eDEHa5UHCY9/91WUttyle4bz2VFPn6eB5vZ1lG7YfQsmP0QxyKCyeoVfItfB4IGmdD4iu4Uvbb4pUBT6e9aR9FROGXycFwKVmad6FAUiKTVH42wqjqXaiIIBhHiNvj7kJWN2drnjqBdfZZEQudcjhf0bxx5mkuoVZx6shdPHLpKOlupaePZ+55yIEhjS+McQBKsPDo/Gz6Q/8sqVFEh2r9KhwP2eC/AhMYl8PAV4W6CVvKbSMZMbT3cdeR6iacXgEchPk9wgBvW9JdZHuTc/GaK16zZdpLLz3a/mo5NxS8hHyY12buCgSGUKTGbNMGYbFkf2zP1Z453eQdKbE0BPkd6x8wfENYTjCwmIfvC6zZY3ftO79VzsAS0 [...]
        key: ENC[AES256_GCM,data:bjXY135h3xqiWFcKE4/Iw2+XDeBIHyj0/sc12DiMl9RpsfHaystbok8qBnC+TbXB/16w9sqzlPJwPU9O30CuakkqhaYqErcwQ8/CAd4WsOodY7QIeQ7DUPTTNrt7V9sdvtbIroRgysNlvSCyQsdheFRMBPMk+gaVVBV6SDy8x+w+v+2RhDnJi0sLdx15XKQrQMmGe/Lk6L79diU2/dxlDoYj8uiKkdb3othBkJ1ABvWfSCsOFwTvOfX0R9v9TlUq2uh2uFGfpSm8reJ37M6eVFZKdklqYWb5VJkwXiHAiFiktjgtiI1HTVvAQpIew2DDc4KquHQivS3s42D8rrgmOcBLdrHeeWEKwTOSXKcASYMm73lXSKtNAhlEhfUEkD5txJEaM9w6EVPAdIfY8SOoJPUeNr7UXq/8ZXIDlFVZ+xxAgtIE2DTS7IbqKvxt+4l+h/V2S6Shh78nXvh29A0 [...]
        termination: ENC[AES256_GCM,data:bjPgww==,iv:p3ytKUFSyjvgvF+qD0S/gciL/c1zCIRY+mwXoSLxrjk=,tag:YHqJSaULAjvw9SNmubrR7w==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2021-08-02T08:42:03Z'
    mac: ENC[AES256_GCM,data:tMG4Z4aCA/rm1Oo3qgXyVDDnK8cO1Ge3i/V42rKiBKZZKOp9PPXcFwktYH53nLjxbYvweti121s8SxDkVXXxvGqCxf6q/i2oBlPnftkH5/9045Y8/jhGXDuiY6RpUwdk16n0ZkCjkW/kdZ2b9ysJVNM6hVmHGE3+9R8kUEaqnEM=,iv:K1yqvTa1REM+eReb34kpzTgTyoU0PATQnBeDitrRMvU=,tag:UIrr+at5uzqlRUM3FhlQ9A==,type:str]
    pgp:
    -   created_at: '2021-08-02T08:42:03Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYARAAusUUDD1okQeJp6QVfsC/3N0OkaF1CQVWZEWuxk738TM0
[...]
            =ygri
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2021-08-02T08:42:03Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf/eXzivh0SlqwidYrJVLWX57iL0MAR374Va8m5vAOLZlOf
[...]
            euHrJL4lzhWnL79IaZIfCx32rzlpHqVs/rpdxYBLQw==
            =9Xwl
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2021-08-02T08:42:03Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAgmxTBLD+Qj8kDfaYx71lJVACGthLSOV+iZUfFp5tVPKM
[...]
            7ZMgtPkLzsgKgNSKK9WEhzZEw1p9qOG+EAtOYRslLA==
            =uDSh
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    -   created_at: '2021-08-02T08:42:03Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiAQ/+LQlQ0xQ/SwHJel/ySHHe0PFemt3rhiBalPjWvMhXdUel
[...]
            =j4Za
            -----END PGP MESSAGE-----
        fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
